[gd_scene load_steps=5 format=3 uid="uid://btd3dhy24ke7k"]

[ext_resource type="PackedScene" uid="uid://dtlud8im5kph7" path="res://Scenes/UI/visuals/count_down/visual_count_down.tscn" id="1_8clk4"]
[ext_resource type="Script" path="res://Scenes/Kitchen/oven/oven.gd" id="1_x6pg4"]
[ext_resource type="Texture2D" uid="uid://bj1yytsaq54hg" path="res://Scenes/Kitchen/oven/oven.png" id="2_cp6pi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jh6bo"]
radius = 226.991

[node name="Oven" type="Node2D"]
position = Vector2(804, 378)
script = ExtResource("1_x6pg4")

[node name="Oven" type="Sprite2D" parent="."]
texture = ExtResource("2_cp6pi")

[node name="VisualCountDown" parent="Oven" instance=ExtResource("1_8clk4")]
offset_left = 249.0
offset_top = -124.0
offset_right = 249.0
offset_bottom = -124.0
metadata/_edit_use_anchors_ = true

[node name="TextureProgressBar" parent="Oven/VisualCountDown" index="0"]
value = 0.0

[node name="Timer" type="Timer" parent="."]

[node name="OvenArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OvenArea"]
shape = SubResource("CircleShape2D_jh6bo")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="OvenArea" to="." method="_on_oven_area_body_entered"]
[connection signal="body_exited" from="OvenArea" to="." method="_on_oven_area_body_exited"]

[editable path="Oven/VisualCountDown"]
